--- a/Desafio3/index.html
+++ b/Desafio3/index.html
@@ -63,9 +63,9 @@
                     <div class="form-group">
                         <label class="control-label col-sm-3">Nombres</label>
                         <div class="col-sm-6">
-                            <input type="text" name="firstName" ng-model="vCtrl.inputData.name" class="form-control" placeholder="Ingrese su nombre" required>
+                            <input type="text" name="firstName" ng-model="vCtrl.inputData.name" class="form-control" placeholder="Ingrese su nombre" required >
                         </div>
-                        <div ng-messages="dataForm.firstName.$error" style="color:red">
+                        <div ng-messages="dataForm.firstName.$error" style="color:red" ng-if='dataForm.firstName.$dirty'>
                             <div ng-message="required">Debe ingresar Nombres</div>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <div class="col-sm-6"> 
                             <input type="text" name="lastName" ng-model="vCtrl.inputData.lastName" class="form-control" id="lastName" placeholder="Ingrese su apellido" required>
                         </div>
-                        <div ng-messages="dataForm.lastName.$error" style="color:red">
+                        <div ng-messages="dataForm.lastName.$error" style="color:red" ng-if='dataForm.lastName.$dirty'>
                             <div ng-message="required">Debe ingresar Apellidos</div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                         <div class="col-sm-6"> 
                             <input type="email" name="email" ng-model="vCtrl.inputData.email" class="form-control" id="email" placeholder="Ingrese su correo" required pattern="^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,3})$">
                         </div>
-                        <div ng-messages="dataForm.email.$error" style="color:red">
+                        <div ng-messages="dataForm.email.$error" style="color:red" ng-if='dataForm.email.$dirty'>
                             <div ng-message="required">Debe ingresar Correo</div>
                             <div ng-message="pattern">Formato correo: nombre@dominio.xxx</div>
                         </div>
@@ -93,7 +93,7 @@
                         <div class="col-sm-6"> 
                             <input type="text" name="rut" ng-model="vCtrl.inputData.rut" class="form-control" id="rut" placeholder="Ingrese su RUT" required pattern="\d{7,8}-[\d|kK]{1}" title="Debe ser un Rut válido. Formato: 1234567-8">
                         </div>
-                        <div ng-messages="dataForm.rut.$error" style="color:red" >
+                        <div ng-messages="dataForm.rut.$error" style="color:red" ng-if='dataForm.rut.$dirty'>
                             <div ng-message="required">Debe ingresar RUT</div>
                             <div ng-message="pattern">Formato: 1234567-8</div>
                         </div>
@@ -101,12 +101,11 @@
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="phone" >Teléfono</label>
                         <div class="col-sm-6"> 
-                            <input type="number" name="phone" ng-minlength="8" ng-maxlength="10" ng-model="vCtrl.inputData.phone" class="form-control" id="phone" placeholder="Ingrese su Teléfono" required>
+                            <input type="number" name="phone"  ng-model="vCtrl.inputData.phone" class="form-control" id="phone" placeholder="Ingrese su Teléfono" required>
                         </div>
-                        <div ng-messages="dataForm.phone.$error" style="color:red" >
+                        <div ng-messages="dataForm.phone.$error" style="color:red" ng-if='dataForm.phone.$dirty'>
                             <div ng-message="required">Debe ingresar Teléfono</div>
-                            <div ng-message="minlength">Mínimo 8 digitos</div>
-                            <div ng-message="maxlength">Máximo 10 digitos</div>
+                       
                         </div>
                     </div>
                     <div class="form-group">
@@ -114,7 +113,7 @@
                         <div class="col-sm-6"> 
                             <input type="text" name="dir1" ng-model="vCtrl.inputData.dir1" class="form-control" id="dir1" placeholder="su dirección" required>
                         </div>
-                        <div ng-messages="dataForm.dir1.$error" style="color:red">
+                        <div ng-messages="dataForm.dir1.$error" style="color:red" ng-if='dataForm.dir1.$dirty'>
                             <div ng-message="required">Debe ingresar Dirección</div>
                         </div>
                     </div>
